@@ -25,6 +25,7 @@ Details    : Remove 2.5.0 check from quota_check.c, quota_ctl.c,
 	     subsystem.
 	     Remove 2.4 kernel check from filter.c, lproc_obdfilter.c in 
 	     obdfilter subsystem.
+	     Remove 2.4 kernel code from lustre/obdecho/echo_client.c.
 
 Severity   : enhancement
 Bugzilla   : 13690
